--- a/code/figure1.Rmd
+++ b/code/figure1.Rmd
@@ -748,6 +748,7 @@ hdb_cluster_assignment <- hdbscan(cluster_umap, minPts = optimal_minPts)
 umap_3d_coors <- gdc_umap_coors %>%
   bind_cols(as.data.frame(cluster_umap)) %>%
   mutate(
+    n_pathways_mut = rowSums(gdc_path[, -1]),
     clust = as.factor(hdb_cluster_assignment$cluster),
     member_prob = hdb_cluster_assignment$membership_prob,
     sample_id = rownames(gdc_umap_coors)
@@ -929,6 +930,7 @@ scale_y_discrete(position = "left") +
  fig1A <- as.ggplot(fig1Ag)
  rm(fig1Ag)
 
+load("../data/figure1B_data.rda")
 optimal_mca_dimensions <- randomize %>%
   filter(pvalue < 0.05) %>%
   filter(eigenvalue == max(eigenvalue)) %>%
@@ -944,7 +946,11 @@ permut_p <- randomize %>%
   scale_y_continuous(labels = scales::percent) +
   xlab("MCA Eigenvalues") +
   ylab("explained variance") +
-  theme_classic()
+  theme_classic() +
+  theme(axis.text.x = element_text(size = 10),
+        axis.text.y = element_text(size = 10),
+        axis.title.x = element_text(size = 12),
+        axis.title.y = element_text(size = 12))
 
 pvalue_p <- randomize %>%
   filter(eigenvalue < 50) %>%
@@ -955,31 +961,55 @@ pvalue_p <- randomize %>%
   ggtitle(label = "", subtitle = paste0("Significant dimensions = ", optimal_dimensions)) +
   xlab("MCA Eigenvalues") +
   ylab("P-value") +
-  theme_classic()
+  theme_classic() +
+  theme(axis.text.x = element_text(size = 10),
+        axis.text.y = element_text(size = 10),
+        axis.title.x = element_text(size = 12),
+        axis.title.y = element_text(size = 12))
 
 fig1B <- permut_p /
   pvalue_p + plot_annotation(title = "Significance of MCA Eigenvalues")
 
-## umap monochrome 2d
-fig1C <- ggplot(umap_cancertype, aes(x=plot_x, y=plot_y)) +
-  geom_point(colour = "grey", size = 0.25) +
-  xlab("umap_1") +
-  ylab("umap_2") +
+fig1C <- ggplot(umap_cancertype %>% arrange(n_pathways_mut), 
+                aes(x=plot_x, y=plot_y)) +
+  geom_point(size = 0.25) +
+  xlab("UMAP 1") +
+  ylab("UMAP 2") +
+  coord_fixed() +
   theme_classic() +
+  scale_color_viridis_c()
   labs(tag = "C") +
   theme(axis.text.x = element_blank(),
         axis.text.y = element_blank(),
         axis.title.x = element_text(size = 12),
         axis.title.y = element_text(size = 12),
         axis.ticks = element_blank())
+
+load("../data/optimal_minpts_score.rda")
+fig1D <- ggplot(score_df, aes(x = minPts, y = score)) +
+  geom_point(data = sample_df, color = "grey", aes(y = value)) +
+  geom_point() + 
+  geom_line() +
+  geom_vline(xintercept = optimal_minPts, color = "#ff0000") +
+  scale_y_log10() +
+  xlab("Minimum Cluster Size") +
+  ggtitle(paste0("Optimal Minimum Cluster Size = ", optimal_minPts)) +
+  theme_classic() +
+  theme(axis.text.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.title.x = element_text(size = 12),
+        axis.title.y = element_text(size = 12),
+        axis.ticks = element_blank())
+
 ## umap hdb_scan
 fig1E <- ggplot(subset(umap_cancertype, clust !=0), aes(x = plot_x, y = plot_y, color = as.factor(clust))) +
   geom_point(data = umap_cancertype, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(size = 0.25) + scale_color_manual(values = kelly.colours[-c(1:2)]) +
   guides(color = F) +
   theme_classic() +
-  xlab("umap_1") +
-  ylab("umap_2") +
+  xlab("UMAP 1") +
+  ylab("UMAP 2") +
+  coord_fixed() +
   theme_classic() +
   labs(tag = "E") +
   theme(axis.text.x = element_blank(),
@@ -993,8 +1023,9 @@ fig1F <- ggplot(subset(umap_cancertype), aes(x = plot_x, y = plot_y, color = as.
   geom_point(size = 0.25) + scale_color_manual(values = kelly.colours[-c(1:2)]) +
   guides(color = F) +
   theme_classic() +
-  xlab("umap_1") +
-  ylab("umap_2") +
+  xlab("UMAP 1") +
+  ylab("UMAP 2") +
+  coord_fixed() +
   theme_classic() +
   labs(tag = "F") +
   theme(axis.text.x = element_blank(),
@@ -1085,8 +1116,9 @@ fig1H <- ggplot(umap_cancertype[umap_cancertype$project_code %in% c("COAD", "BRC
   geom_point(data = umap_cancertype, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(size = 0.25) + 
   theme_classic() +
-  ylab("umap_2") +
-  xlab("umap_1") +
+  ylab("UMAP 2") +
+  xlab("UMAP 1") +
+  coord_fixed() +
   labs(tag = "H", color = "") +
   scale_color_manual(labels = c("BRCA", "COAD", "HNSC", "PAAD"), 
                      values = c('#fb9a99', '#b15928', '#6a3d9a', 'springgreen4')) +
@@ -1102,8 +1134,9 @@ fig1I <- ggplot(umap_cancertype %>% filter(project_code == "BRCA" & !is.na(Subty
   geom_point(data = umap_cancertype, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(size = 0.25) +
   theme_classic() +
-  ylab("umap_2") +
-  xlab("umap_1") +
+  ylab("UMAP 2") +
+  xlab("UMAP 1") +
+  coord_fixed() +
   labs(tag = "I", color = "") +
   theme(axis.text.x = element_blank(),
         axis.text.y = element_blank(),
@@ -1136,8 +1169,9 @@ fig1J <- ggplot(brca %>% filter(mut_type != "NA"), aes(x = plot_x, y = plot_y, c
   geom_point(data = brca, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(size = 0.25) + 
   theme_classic() +
-  ylab("umap_2") +
-  xlab("umap_1") +
+  ylab("UMAP 2") +
+  xlab("UMAP 1") +
+  coord_fixed() +
   labs(color = "", tag = "J") +
   scale_color_manual(labels = c("BRCA1", "BRCA1,BRCA2", "BRCA2"), 
                      values = c('#33a02c', '#e31a1c', '#ff7f00')) +
@@ -1153,8 +1187,9 @@ fig1K <- ggplot(subset(umap_cancertype, ajcc_pathologic_tumor_stage != "Not Avai
   geom_point(data = umap_cancertype, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(size = 0.25) + 
   theme_classic() +
-  ylab("umap_2") +
-  xlab("umap_1") +
+  ylab("UMAP 2") +
+  xlab("UMAP 1") +
+  coord_fixed() +
   labs(tag = "K", color = "") +
   scale_color_manual(labels = c("Stage I", "Stage II", "Stage III", "Stage IV"), 
                      values = c('darkgoldenrod3','dodgerblue3','yellow3','tomato2')) +
@@ -1170,8 +1205,9 @@ fig1L <- ggplot(umap_cancertype, aes(x = plot_x, y = plot_y)) +
   geom_point(data = umap_cancertype, aes(x = plot_x, y = plot_y), colour = "grey", size = 0.25) +
   geom_point(data = subset(umap_cancertype, ajcc_metastasis_pathologic_pm == "M0"), aes(x = plot_x, y = plot_y, colour = ajcc_metastasis_pathologic_pm), size = 0.25) + 
   geom_point(data = subset(umap_cancertype, ajcc_metastasis_pathologic_pm == "M1"), aes(x = plot_x, y = plot_y, colour = ajcc_metastasis_pathologic_pm), size = 0.25) + 
-  ylab("umap_2") +
-  xlab("umap_1") +
+  ylab("UMAP 2") +
+  xlab("UMAP 1") +
+  coord_fixed() +
   labs(tag = "L", color = "") +
   scale_color_manual(labels = c("M0", "M1"), 
                      values = c('#a6cee3','#1f78b4')) +
@@ -1185,14 +1221,14 @@ fig1L <- ggplot(umap_cancertype, aes(x = plot_x, y = plot_y)) +
 
 layout <- '
 AAAABBCCDD
-AAAAEEEFFF
+AAAABBEEFF
 AAAAGGGGGG
 AAAAGGGGGG
 AAAAHHIIJJ
 AAAAKKLL##
 '
 
-fig1A + plot_spacer() + fig1C + plot_spacer() + fig1E + fig1F + fig1G + fig1H + fig1I + fig1J + fig1K + fig1L + plot_layout(design = layout)
+fig1A + fig1B + fig1C + fig1D + fig1E + fig1F + fig1G + fig1H + fig1I + fig1J + fig1K + fig1L + plot_layout(design = layout)
 
 ```
 
