--- a/text/references.bib
+++ b/text/references.bib
@@ -440,3 +440,14 @@
   year = {2018},
   pmid = {29414946}
 }
+
+@article{expression-aware-annotation,
+  author = {Cummings, B.B. and Karczewski, K.J. and Kosmicki, J.A. and Seaby, E.G. and Watts, N.A. and Singer-Berk, M. and Mudge, J.M. and Karjalainen, J. and Satterstrom, F.K. and O’Donnell-Luria, A.H. and Poterba, T. and Seed, C. and Solomonson, M. Alföldi, J. and Genome Aggregation Database Production Team, Genome Aggregation Database Consortium, and Daly M.J. and MacArthur, D.G.},
+  title = {Transcript expression-aware annotation improves rare variant interpretation},
+  journal = {Nature},
+  year = {2020},
+  volume = {581},
+  pages = {452--458},
+  doi = {10.1038/s41586-020-2329-2},
+  pmid = {32461655}
+}
