--- a/code/figure3.Rmd
+++ b/code/figure3.Rmd
@@ -1,12 +1,11 @@
 ```{r group-pathway-enrichment-data-generation, eval=FALSE}
-tumor_clusters <- fread("../data/umap_2d_3d_coors.tsv") ## load in data
-tumor_clusters <- tumor_clusters %>% as.data.frame() %>% dplyr::select(V1, knn_clust) ## select the relevant columns
+tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
+tumor_clusters <- tumor_clusters %>% as.data.frame() %>% dplyr::select(sample_id, clust_knn) ## select the relevant columns
 
 ## Getting the total number of tumor samples in each cluster
-n_tumor_in_clust <- as.data.frame(table(tumor_clusters$knn_clust)) %>% ## table the number of tumors in each cluster
+n_tumor_in_clust <- as.data.frame(table(tumor_clusters$clust_knn)) %>% ## table the number of tumors in each cluster
   'colnames<-' (c("clust", "tot_n_clust")) %>% ## move cluster number to rownames
   mutate(clust = as.character(clust)) ## convert factor to character
-
 
 ## Organizing rBeta data
 load("../data/gdc_reactome_path_analysis.Rda")
@@ -14,8 +13,8 @@ clust_group <- n_tumor_in_clust$clust
 cluster_path_count <- list()
 for(n in clust_group) {
   print(n)
-  sample_id <- tumor_clusters %>% filter(knn_clust == n) %>% ## filter for tumor class
-    .[,"V1"] ## get sample_ids
+  sample_id <- tumor_clusters %>% filter(clust_knn == n) %>% ## filter for tumor class
+    .[,"sample_id"] ## get sample_ids
   path_mutation <- gdc_reactome_path_analysis %>% .[,names(.) %in% sample_id] %>% ## getting the tumor samples from path analysis
     rowSums() %>% as.data.frame() %>% ## getting the observed mutation count of tumor class
     'colnames<-' (n) ## change colname to cluster number
@@ -26,7 +25,7 @@ for(n in clust_group) {
 cluster_path_count <- do.call(cbind, cluster_path_count) ## Combine the list together
 
 global_path_mut <- cluster_path_count %>% rowSums() %>% as.data.frame() %>% ## global pathway mutation count
-  .[rep(1:ncol(.), each = 12)] %>% ## replicate the column 12 times for the 12 tumor classes
+  .[rep(1:ncol(.), each = max(tumor_clusters$clust_knn))] %>% ## replicate the column 0 times for the 10 tumor classes
   'colnames<-' (clust_group) %>% ## rename column with tumor class
   rownames_to_column(var = "path") %>% ## move rownames to column (pathways) %>%
   gather(., key = "clust", value = "global_mut", -path)
@@ -96,7 +95,7 @@ gc()
 CI <- 0.025 ## setting a 95% confidence interval
 
 diff_fg_bg <- moderate_fg - moderate_bg ## fg - bg
-rm(moderate_fg, moderate_bg, prob)
+rm(moderate_fg, moderate_bg)
 gc()
 
 sig_fg_bg <- as.data.frame(apply(diff_fg_bg, MARGIN = 2, function(x) {
@@ -115,7 +114,7 @@ moderate_enrich_prob <- data.frame(path = enrich_prob_uncertainity_in_bg$path,
                                    upper = quant_diff[,3])
 rm(enrich_prob_uncertainity_in_bg, mean_prob, quant_diff, sig_fg_bg, diff_fg_bg)
 gc()
-#save(moderate_enrich_prob, file = "moderate_enrich_prob.Rda")
+save(moderate_enrich_prob, file = "../data/moderate_enrich_prob.Rda")
 load("../data/moderate_enrich_prob.Rda")
 
 diff_heatmap <- moderate_enrich_prob[,c("path", "clust", "difference")]
@@ -140,7 +139,7 @@ effect_heatmap <- diff_heatmap %>% rownames_to_column(var = "path_name") %>%
   gather(., key = "cluster", value = "effect_size", -path_name) 
 
 effect_heatmap$path_name <- factor(effect_heatmap$path_name, levels = c(rev(effect_row_order)))
-effect_heatmap$cluster <- factor(effect_heatmap$cluster, levels = c(1:12))
+effect_heatmap$cluster <- factor(effect_heatmap$cluster, levels = c(1:max(as.numeric(effect_heatmap$cluster))))
 effect_segments <- c(seq(from = -1, -0.2, 0.2), -0.0001, 0.0001, seq(from = 0.2, to = 1, by = 0.2))
 
 effect_heatmap <- effect_heatmap %>% mutate(discrete_color = case_when(
@@ -158,12 +157,13 @@ effect_heatmap <- effect_heatmap %>% mutate(discrete_color = case_when(
 ))
 effect_heatmap$discrete_color <- factor(effect_heatmap$discrete_color, levels = c(1:11))
 
-save(effect_heatmap, file = "effect_heatmap.Rda")
+save(effect_heatmap, file = "../data/effect_heatmap.Rda")
+rm(list = ls(all.names = T))
+gc()
 ```
 
 ```{r group-pathway-enrichment heatmap, fig.width= 5, fig.height= 10, fig.align= 'center', fig.cap="**Figure 3. Pathway-specific enrichment within clusters.** Heatmap shows relative enrichment of each pathway (rows) within each numbered cluster (columns). The annotation at left indicates the Reactome pathway group at the second level (check this)."}
 load("../data/effect_heatmap.Rda") ## load data
-effect_heatmap$test <- 1
 
 effect_colors = c("1" = "#2d004b", "2" = "#542788", "3" = "#8073ac", "4" = "#b2abd2", "5" = "#d8daeb", "6" = "white", "7" = "#fee0b6", "8" = "#fdb863", "9" = "#e08214","10" = "#b35806","11" ="#7f3b08") ## color scheme
 
@@ -189,25 +189,6 @@ fig3_legend <- ggplot(data = data.frame(x = 1:11, y = 1), aes(x = x, y = y, fill
         axis.title.x = element_blank(),
         axis.title.y = element_blank(),
         axis.line = element_blank())
-
-# ## setting patchwork panel layout
-# layout <- '
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# AAAAA
-# #BBB#
-# '
-# 
-# fig3 + fig3_legend + plot_layout(design = layout)
 
 fig3_legend <- plot_grid(NULL, fig3_legend, NULL, ncol = 3)
 
