--- a/code/table1.Rmd
+++ b/code/table1.Rmd
@@ -1,6 +1,6 @@
 <div style="text-align: right"> Table 1 Data </div>
 ```{r table-1-data-generation, eval = FALSE}
-tumor_clusters <- fread("../data/umap_2d_3d_coors.tsv") ## load in data
+tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
 load("../data/moderate_enrich_prob.Rda") ## load data
 load("../data/gene2_level2_lookup.Rda")
 load("../data/gene_data.Rda")
@@ -49,7 +49,7 @@ cluster_spec_enrich_table <- list() ## list for forloop
 for(d in unique(clust_spec_enrich_top5$clust)) {
   message(d)
   clust_toppath <- clust_spec_enrich_top5 %>% filter(clust == d) %>% .$path %>% as.character() ## get the top pathway names for spec class
-  class_spec <- tumor_clusters %>% dplyr::select(V1, knn_clust, project_code) %>% filter(knn_clust %in% d) ## get the smaple ids and cancer type for spec class
+  class_spec <- tumor_clusters %>% dplyr::select(sample_id, clust_knn, project_code) %>% filter(clust_knn %in% d) ## get the smaple ids and cancer type for spec class
   top_genes_in_path_cancer_type <- list()
   for(n in clust_toppath) { ## for each of the top paths do this
     message(n)
@@ -60,21 +60,23 @@ for(d in unique(clust_spec_enrich_top5$clust)) {
     top_gene_in_path <- list()
     for(t in type) { ## looping through cancer type within class
       message(t)
-      class_spec <- tumor_clusters %>% dplyr::select(V1, knn_clust, project_code) %>% filter(knn_clust == d) ## sample_id for class
+      class_spec <- tumor_clusters %>% dplyr::select(sample_id, clust_knn, project_code) %>% filter(clust_knn == d) ## sample_id for class
       if(t %in% class_spec$project_code) { ## if cancer type is in class then run this 
-        class_type_spec <- class_spec %>% filter(project_code == t) %>% column_to_rownames(var = "V1") %>% rownames() ## get cancer type specific tumor classes
+        class_type_spec <- class_spec %>% filter(project_code == t) %>% column_to_rownames(var = "sample_id") %>% rownames() ## get cancer type specific tumor classes
       if(length(class_type_spec) == 1) { ## if you only have 1 sample_id in the class
-        top_mut_gene <- gene_mutation %>% rownames_to_column(var = "gene") %>% .[.$gene %in% gene_in_path, names(.) %in% c("gene",  class_type_spec)] %>% remove_rownames() %>% column_to_rownames(var = "gene") %>% 'colnames<-' ("obs_count") %>% 
+        top_mut_gene <- gene_mutation %>% rownames_to_column(var = "gene") %>% .[.$gene %in% gene_in_path, names(.) %in% c("gene",  class_type_spec)] %>% remove_rownames() %>% column_to_rownames(var = "gene") %>% 'colnames<-' ("obs_count") %>%
+          rownames_to_column(var = "gene") %>%
           mutate(n_sample = length(class_type_spec),
                perc_mut = round((obs_count / length(class_type_spec)) * 100, digits = 1)) %>% 
-        rownames_to_column(var = "gene") %>% arrange(desc(obs_count))
+         arrange(desc(obs_count))
       }
       if(length(class_type_spec) > 1) { ## if you have more than 1 sample_id in the class
         top_mut_gene <- gene_mutation %>% .[rownames(.) %in% gene_in_path, names(.) %in% class_type_spec] %>% 
         rowSums() %>% as.data.frame() %>% 'colnames<-' ("obs_count") %>%
+        rownames_to_column(var = "gene") %>%
         mutate(n_sample = length(class_type_spec),
                perc_mut = round((obs_count / length(class_type_spec)) * 100, digits = 1)) %>% 
-        rownames_to_column(var = "gene") %>% arrange(desc(obs_count))
+         arrange(desc(obs_count))
       }
       if(show_perc == TRUE & show_n == FALSE) {
          top_gene_in_path[[t]] <- paste0(top_mut_gene$gene[mutated_gene_position], " (", top_mut_gene$perc_mut[mutated_gene_position],"%)")  
@@ -98,21 +100,21 @@ for(d in unique(clust_spec_enrich_top5$clust)) {
   t() %>% as.data.frame() %>% rownames_to_column(var = "Pathway")
   }
 
-cluster_spec_enrich_table1 <- cluster_spec_enrich_table %>% do.call(rbind, .) %>% as.data.frame()
-save(cluster_spec_enrich_table1, file = "cluster_spec_enrich_table1.Rda")
+cluster_spec_enrich_table <- cluster_spec_enrich_table %>% do.call(rbind, .) %>% as.data.frame()
+save(cluster_spec_enrich_table, file = "../data/cluster_spec_enrich_table.Rda")
 rm(list = ls(all.names = T))
 gc()
 ```
 
 ```{r table-1}
-load("../data/cluster_spec_enrich_table1.Rda")
-tumor_clusters <- fread("../data/umap_2d_3d_coors.tsv") ## load in data
+load("../data/cluster_spec_enrich_table.Rda")
+tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
 
 ## Selecting the top 10 cancers with the largest n for table 1
 n_tumor <- as.data.frame(table(tumor_clusters$project_code))
 n_tumor <- n_tumor %>% arrange(desc(Freq)) %>% .[1:10, "Var1"] %>% as.character() %>% .[order(.)]
 
-cluster_spec_enrich_table1 %>% .[, c("Pathway", "Class", n_tumor)] %>% kable(caption = "Table 1: Most mutated gene in class-specific pathways (enrichment score >= 0.30) for specific cancer", row.names = FALSE) %>%
+cluster_spec_enrich_table %>% .[, c("Pathway", "Class", n_tumor)] %>% kable(caption = "Table 1: Most mutated gene in class-specific pathways (enrichment score >= 0.30) for specific cancer", row.names = FALSE) %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE, font_size = 12) %>%
   column_spec(1, bold = T)
 ```
