--- a/code/table2.Rmd
+++ b/code/table2.Rmd
@@ -1,27 +1,27 @@
 <div style="text-align: right"> Table 2 Data </div>
 ```{r table-2-data-generation, eval = FALSE}
-tumor_clusters <- fread("../data/umap_2d_3d_coors.tsv") ## load in data
+tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
 load("../data/gdc_reactome_path_analysis.Rda")
 
-tumor_clusters <- tumor_clusters %>% dplyr::select(V1, ajcc_metastasis_pathologic_pm, knn_clust)
+tumor_clusters <- tumor_clusters %>% dplyr::select(sample_id, ajcc_metastasis_pathologic_pm, clust_knn)
 
 m0_clust <- tumor_clusters[tumor_clusters$ajcc_metastasis_pathologic_pm == "M0",] ## filter for nonmetastatic samples
 m1_clust <- tumor_clusters[tumor_clusters$ajcc_metastasis_pathologic_pm == "M1",] ## filter for metastatic samples
 
 prepare_rbeta_data_p1 <- function(data, path_analysis) {
   n_tumor_in_group <- as.data.frame(table(data$ajcc_metastasis_pathologic_pm)) ## Getting the total number of tumor samples in each group
-  path_analysis <- path_analysis[,names(path_analysis) %in% data$V1] ## Filter only group specific cancers
-  data <- data[match(names(path_analysis), data$V1),] ## Match tumor sample ids
-  table(names(path_analysis) == data$V1) ## good they match now
+  path_analysis <- path_analysis[,names(path_analysis) %in% data$sample_id] ## Filter only group specific cancers
+  data <- data[match(names(path_analysis), data$sample_id),] ## Match tumor sample ids
+  table(names(path_analysis) == data$sample_id) ## good they match now
   ## Now we are going to build group specific cluster data
-  n_tumor_in_clust <- as.data.frame(table(data$knn_clust)) ## getting total n in each cluster
+  n_tumor_in_clust <- as.data.frame(table(data$clust_knn)) ## getting total n in each cluster
   names(n_tumor_in_clust) <- c("clust", "tot_n_clust") ## rename colnames
   clust_group <- as.character(n_tumor_in_clust$clust) ## Getting the cluster numbers
   cluster_path_count <- list() ## Creating a list for the forloop
   for(n in clust_group) {
     print(n)
-    df <- subset(data, knn_clust == n) ## subset cluster number
-    df <- df$V1 ## getting tumor sample id
+    df <- subset(data, clust_knn == n) ## subset cluster number
+    df <- df$sample_id ## getting tumor sample id
     df1 <- path_analysis[,names(path_analysis) %in% df] ## getting the tumor samples from path analysis
     df1 <- as.data.frame(rowSums(df1))
     names(df1) <- n
@@ -43,49 +43,11 @@ prepare_rbeta_data_p1 <- function(data, path_analysis) {
 }
 
 m0_rbeta <- prepare_rbeta_data_p1(data = m0_clust, path_analysis = gdc_reactome_path_analysis)
-## Combining cluster 6/7 cluster 910 cluster 1112
-combo_group <- c("6", "9", "11")
-compo_group_df <- list() ## list for loop
-for(n in combo_group) {
-  print(n) ## first cluster in set
-  m <- as.numeric(n) + 1 ## second cluster in set
-  m <- as.character(m)
-  df <- m0_rbeta[m0_rbeta$clust == n,] ## get rbeta info for first cluster in set
-  df1 <- m0_rbeta[m0_rbeta$clust == m,] ## get rbeta info for second cluster in set
-  tot_clust_mut <- df$clust_mut + df1$clust_mut ## add both clust muts
-  tot_n_clust <- df$tot_n_clust + df1$tot_n_clust ## add both clust n's
-  p <- paste0(n,m)
-  df2 <- m0_rbeta[1:377,]
-  df2$clust <- p ## replace with new clust name
-  df2$clust_mut <- tot_clust_mut ## replace with new clust mut count
-  df2$tot_n_clust <- tot_n_clust ## replace with new clust size
-  compo_group_df[[p]] <- df2 ## store in list and continue loop
-}
-compo_group_df <- do.call(rbind, compo_group_df) ## rbind list
-m0_rbeta <- rbind(m0_rbeta, compo_group_df) ## rbind m0_rbeta and the compo group together
-save(m0_rbeta, file = "m0_rbeta.Rda")
+save(m0_rbeta, file = "../data/m0_rbeta.Rda")
 
 ## repeat same function above with metastasis sample
 m1_rbeta <- prepare_rbeta_data_p1(data = m1_clust, path_analysis = gdc_reactome_path_analysis)
-compo_group_df <- list() ## list for loop
-for(n in combo_group) {
-  print(n) ## first cluster in set
-  m <- as.numeric(n) + 1 ## second cluster in set
-  m <- as.character(m)
-  df <- m0_rbeta[m0_rbeta$clust == n,] ## get rbeta info for first cluster in set
-  df1 <- m0_rbeta[m0_rbeta$clust == m,] ## get rbeta info for second cluster in set
-  tot_clust_mut <- df$clust_mut + df1$clust_mut ## add both clust muts
-  tot_n_clust <- df$tot_n_clust + df1$tot_n_clust ## add both clust n's
-  p <- paste0(n,m)
-  df2 <- m0_rbeta[1:377,]
-  df2$clust <- p ## replace with new clust name
-  df2$clust_mut <- tot_clust_mut ## replace with new clust mut count
-  df2$tot_n_clust <- tot_n_clust ## replace with new clust size
-  compo_group_df[[p]] <- df2 ## store in list and continue loop
-}
-compo_group_df <- do.call(rbind, compo_group_df) ## rbind list
-m1_rbeta <- rbind(m1_rbeta, compo_group_df) ## Combine the new groups
-save(m1_rbeta, file = "m1_rbeta.Rda")
+save(m1_rbeta, file = "../data/m1_rbeta.Rda")
 
 ## function to compiling data for rbeta analysis
 prepare_rbeta_data_p2 <- function(data) {
@@ -123,7 +85,7 @@ return(enrich_prob_df)
 m0_rbeta <- prepare_rbeta_data_p2(m0_rbeta)                               
 m1_rbeta <- prepare_rbeta_data_p2(m1_rbeta)     
 
-save(m0_rbeta, m1_rbeta, file = "m0_m1_rbeta.Rda")
+save(m0_rbeta, m1_rbeta, file = "../data/m0_m1_rbeta.Rda")
 rm(list = ls(all.names = T)) ## cleaning up data
 gc()
 load("../data/m0_m1_rbeta.Rda")
@@ -164,7 +126,7 @@ m1_minus_m0_per_cluster_rbeta <- data.frame(path = m1_rbeta$path,
                                    difference = quant_diff[,2],
                                    lower = quant_diff[,1],
                                    upper = quant_diff[,3])
-save(m1_minus_m0_per_cluster_rbeta, file = "m1_minus_m0_per_cluster_rbeta.Rda")
+save(m1_minus_m0_per_cluster_rbeta, file = "../data/m1_minus_m0_per_cluster_rbeta.Rda")
 rm(list = ls(all.names = T))
 gc()
 ```
